Title style changes

--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -359,7 +359,7 @@
 
     text-align: center;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.33);
-    text-transform: uppercase;
+    text-transform: lowercase;
     top: 100px;
     z-index: 3;
 
