--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -359,7 +359,7 @@
 
     text-align: center;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.33);
-    text-transform: lowercase;
+    text-transform: capitalize;
     top: 100px;
     z-index: 3;
 
@@ -394,7 +394,21 @@
 #buttons .btn, #tooltips .btn{
     margin-bottom: 15px;
 }
-.img-dog{
+.img-me{
     display: inline-block;
     margin-bottom: 25px;
+}
+.img-sat{
+    position: absolute;
+    bottom: 0;
+    left: 13.5%;
+    margin-bottom: 25px;
+}
+.overlay{
+    opacity: 0;
+    transition: .5s ease;
+}
+.overlay:hover{
+    opacity: 0.8;
+    
 }
