--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -423,6 +423,9 @@
     width:100%;
     margin-top:100px
 }
+.contacts-title{
+    height: 420px
+}
 
 @media (max-width: 768px) {
 	.move-txt-down-xs{
