--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -454,15 +454,47 @@
     margin-bottom:0;
     margin-top:0;
 }
+.youtube-container{
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%;
+    margin-bottom:5%;
+    margin-top:5%;
+}
+.youtube-vid{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+.link-buttons-container{
+    margin-top:30%;
+}
+.link-button{
+    margin:10%;
+}
 
+.letter-of-recommendation{
+    margin-left:20%;
+}
 
 @media (max-width: 768px) {
 	.carousel-titles{
 		font-size: 20px;
-		
 	}
 	.move-txt-down-xs{
 		margin-top:400px;
+	}
+	.link-buttons-container{
+		margin-top:10%;
+		margin-bottom:0;
+	}
+	.letter-of-recommendation{
+    		margin-left:0%;
 	}
 }
 @media (min-width: 768px) and (max-width: 991px) {
